# AOC2023

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
.github/workflows/: ci.yml
data/examples/: 01.txt
src/: template.rs
utils/download/: Cargo.toml
utils/download/src/: main.rs
utils/scaffold/: Cargo.toml
utils/scaffold/src/: main.rs
